<resources>
    <string name="app_name">Management</string>
    <string name="error_message">Something went wrong! try again after some time</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="register">Register</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="enter_valid_password">Enter valid password</string>
    <string name="name">Name</string>
    <string name="enter_valid_name">Enter valid name</string>
    <string name="select_question_type">Select question type</string>
    <string name="question">Question</string>
    <string name="select_options">Select options or answers</string>
    <string name="select_answer">Select answer</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="option4">Option 4</string>
    <string name="done">Done</string>
    <string name="enter_valid_question">Enter valid question</string>
    <string name="answer_is_empty">Answer is empty</string>
    <string name="option_is_empty">Option is empty</string>
    <string name="answer_must_match_options">Answer must match options</string>
    <string name="fill_options">Fill options</string>
    <string name="long_answer">Long Answer</string>
    <string name="short_answer">Short Answer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="capture">Capture</string>
    <string name="camera_rationale">This app requires to access camera to capture image</string>
    <string name="answer_submitted_successfully">Answer submitted successfully</string>
    <string name="add_user">Add user</string>
    <string name="password_updated_successfully">Password updated successfully</string>
    <string name="management">Management</string>
    <string name="admin">Admin</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="logout">Logout</string>
    <string name="answer">Answer</string>
</resources>
