<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="32dp">

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/add_user"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerType"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/ic_border"
            android:entries="@array/type"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_user"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:textColor="@color/colorPrimary"
            android:backgroundTint="@color/colorAccent"/>

</LinearLayout>